Follower/Follwing list alignment fix

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1175,6 +1175,14 @@ h1 {
   margin-left: 10px;
 }
 
+.followers_list .follower_info {
+  float: left;
+  word-wrap: break-word;
+  width: 250px;
+  margin-right: -20px;
+  margin-left: 10px;
+}
+
 .followers_list .follower_actions {
     float: right;
     width: 155px;
